<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activity.QuotationRequestActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Header -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:text="@string/title_quotation_request"
            android:textColor="#007f3f"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Logo -->
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="80dp"
            android:layout_height="110dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_mainlogo" />

        <!-- Name -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/hint_full_name"
            android:padding="10dp" />

        <!-- Email -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/hint_mail"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <!-- Phone -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_phone"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:padding="10dp" />

        <!-- Book Info -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgBook"
                    android:layout_width="107dp"
                    android:layout_height="139dp"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_marginEnd="12dp" />

                <Button
                    android:id="@+id/btnSelectImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="#0B8144"
                    android:text="@string/title_select_img" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtBookname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_book_name"
                    android:inputType="text"
                    android:textColor="@color/darkred"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titleProductAuthor"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:padding="6dp"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titleProductPublisher"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtPublisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:text="@string/title_price"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/edtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:textColor="#E91E63" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_condition"
            android:textStyle="bold" />
        <RadioGroup
            android:id="@+id/radioCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">

            <RadioButton
                android:id="@+id/radioLikeNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:buttonTint="#007f3f"
                android:text="@string/title_like_new"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/radioGood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:buttonTint="#007f3f"
                android:text="@string/title_good"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/radioAcceptable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#007f3f"
                android:text="@string/title_acceptable"
                android:textColor="#000000" />
        </RadioGroup>

        <!-- Note -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_note_1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/title_note"
            android:minLines="2"
            android:padding="10dp" />

        <!-- Confirm Text -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="#f4e3d3"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/title_confirm_selling"
            android:textColor="#990000"
            android:textStyle="bold" />

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/btnYes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Yes"
                android:background="#007f3f"
                android:textColor="#ffffff"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btnNo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="No"
                android:background="#a00000"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
