<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="210dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:elevation="18dp"
    android:background="@drawable/shadow_filter">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="#CEE5D9"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="18dp"
            android:layout_height="18dp"
            app:srcCompat="@drawable/ic_event_type"
            android:layout_marginStart="18dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_event_type"
            android:fontFamily="@font/poppins"
            android:textSize="15dp"
            android:layout_marginStart="10dp"
            android:textColor="#0A7B41"
            />
    </TableRow>

    <CheckBox
        android:id="@+id/chkbWorkshop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/title_workshop"
        android:textSize="15dp"
        android:layout_marginStart="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC" />


    <CheckBox
        android:id="@+id/chkbCompetition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/title_Competition"
        android:textSize="15dp"
        android:layout_marginStart="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC" />


    <CheckBox
        android:id="@+id/chkbArtShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/title_art_show"
        android:textSize="15dp"
        android:layout_marginStart="10dp"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="#CEE5D9"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="18dp"
            app:srcCompat="@drawable/ic_registration_status" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/title_event_registration_status"
            android:textColor="#0A7B41"
            android:textSize="15dp" />
    </TableRow>

    <CheckBox
        android:id="@+id/chkbOpenRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/title_open_registration"
        android:textSize="15dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC" />


    <CheckBox
        android:id="@+id/chkClosedRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/title_closed_registration"
        android:textSize="15dp" />


    <Button
        android:id="@+id/btnApply"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#0A7B41"
        android:text="@string/title_btn_apply"
        app:cornerRadius="0dp" />
</LinearLayout>