<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".activity.QuotationActivity">

    <!-- Header -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#006400"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="Back"
            android:src="@drawable/ic_back" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="Avatar"
            android:src="@drawable/ic_avatar" />

    </LinearLayout>

    <!-- Create Button -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_my_quotation"
        android:textColor="#391319"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnCreateQuotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:backgroundTint="#FFFFFF
"
        android:text="@string/title_create_new_quotation"
        android:textColor="#006400"
        app:strokeColor="#006400"
        app:strokeWidth="1sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerQuotation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp" />

    <Button
        android:id="@+id/btnLoadMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:backgroundTint="#006400"
        android:text="@string/title_load_more"
        android:textColor="#FFFFFF" />
</LinearLayout>
