<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RegisterEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:orientation="vertical">

        <!-- LOGO + THANH TÌM KIẾM + ICON -->
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_logo_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingStart="32dp"
            android:paddingEnd="32dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/title_register_event"
                android:textColor="#ffffff"
                android:textSize="14dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_leave_a_note"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="14dp"/>

        <EditText
            android:id="@+id/edtNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_password_field"
            android:fontFamily="@font/poppins"
            android:gravity="top|start"
            android:hint="@string/title_hint_registration_note"
            android:inputType="textMultiLine"
            android:lines="5"
            android:padding="10dp"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="190dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="#0A7B41"
            android:fontFamily="@font/poppins"
            android:text="@string/title_btn_register"
            android:textSize="15dp"
            app:cornerRadius="0dp" />

    </LinearLayout>

</LinearLayout>